NetBSD Problem Report #55252

From www@netbsd.org  Mon May 11 05:24:45 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C35091A9213
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 11 May 2020 05:24:45 +0000 (UTC)
Message-Id: <20200511052445.0BD981A9218@mollari.NetBSD.org>
Date: Mon, 11 May 2020 05:24:45 +0000 (UTC)
From: payphoneed@gmail.com
Reply-To: payphoneed@gmail.com
To: gnats-bugs@NetBSD.org
Subject: NetBSD-current evbarm uvm_fault in cprng_strong+0x30
X-Send-Pr-Version: www-1.0

>Number:         55252
>Category:       port-arm32
>Synopsis:       NetBSD-current evbarm uvm_fault in cprng_strong+0x30
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    riastradh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 11 05:25:00 +0000 2020
>Closed-Date:    Wed May 13 06:06:56 +0000 2020
>Last-Modified:  Wed May 13 06:06:56 +0000 2020
>Originator:     Neko May
>Release:        9..99.60
>Organization:
>Environment:
n/a
>Description:
NetBSD on multiple evbarm platforms crashes trying to boot with a uvm_fault in cprng_strong+0x30.

Tested:
Banana Pi M3
Cubieboard4
>How-To-Repeat:
Try to boot
>Fix:

>Release-Note:

>Audit-Trail:
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55252 CVS commit: src/sys/kern
Date: Mon, 11 May 2020 17:27:48 +0000

 Module Name:	src
 Committed By:	riastradh
 Date:		Mon May 11 17:27:48 UTC 2020

 Modified Files:
 	src/sys/kern: subr_cprng.c

 Log Message:
 Work around early calls to cprng_strong.

 The bottleneck here is getting percpu_create to work early enough.
 We should really fix that, but for now, this workaround will serve.

 Should fix PR port-arm32/55252.


 To generate a diff of this commit:
 cvs rdiff -u -r1.37 -r1.38 src/sys/kern/subr_cprng.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55252 CVS commit: src/sys/kern
Date: Mon, 11 May 2020 21:40:12 +0000

 Module Name:	src
 Committed By:	riastradh
 Date:		Mon May 11 21:40:12 UTC 2020

 Modified Files:
 	src/sys/kern: subr_cprng.c

 Log Message:
 Remove cprng initialization order hack.

 cprng_init now runs early enough that the hack should no longer be
 needed to address PR port-arm32/55252.


 To generate a diff of this commit:
 cvs rdiff -u -r1.39 -r1.40 src/sys/kern/subr_cprng.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: port-arm32-maintainer->riastradh
Responsible-Changed-By: riastradh@NetBSD.org
Responsible-Changed-When: Mon, 11 May 2020 21:54:55 +0000
Responsible-Changed-Why:
Can you update to HEAD and see if it works now?


State-Changed-From-To: open->feedback
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Mon, 11 May 2020 21:54:55 +0000
State-Changed-Why:
mine


From: Edward Swiftwood <payphoneed@gmail.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-arm32/55252 (NetBSD-current evbarm uvm_fault in cprng_strong+0x30)
Date: Wed, 13 May 2020 01:51:38 -0400

 --000000000000db241405a5812c2e
 Content-Type: text/plain; charset="UTF-8"

 It now boots successfully. Nice work.

 On Mon, May 11, 2020, 5:54 PM <riastradh@netbsd.org> wrote:

 > Synopsis: NetBSD-current evbarm uvm_fault in cprng_strong+0x30
 >
 > Responsible-Changed-From-To: port-arm32-maintainer->riastradh
 > Responsible-Changed-By: riastradh@NetBSD.org
 > Responsible-Changed-When: Mon, 11 May 2020 21:54:55 +0000
 > Responsible-Changed-Why:
 > Can you update to HEAD and see if it works now?
 >
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: riastradh@NetBSD.org
 > State-Changed-When: Mon, 11 May 2020 21:54:55 +0000
 > State-Changed-Why:
 > mine
 >
 >
 >
 >

 --000000000000db241405a5812c2e
 Content-Type: text/html; charset="UTF-8"
 Content-Transfer-Encoding: quoted-printable

 <div dir=3D"auto">It now boots successfully. Nice work.</div><br><div class=
 =3D"gmail_quote"><div dir=3D"ltr" class=3D"gmail_attr">On Mon, May 11, 2020=
 , 5:54 PM  &lt;<a href=3D"mailto:riastradh@netbsd.org">riastradh@netbsd.org=
 </a>&gt; wrote:<br></div><blockquote class=3D"gmail_quote" style=3D"margin:=
 0 0 0 .8ex;border-left:1px #ccc solid;padding-left:1ex">Synopsis: NetBSD-cu=
 rrent evbarm uvm_fault in cprng_strong+0x30<br>
 <br>
 Responsible-Changed-From-To: port-arm32-maintainer-&gt;riastradh<br>
 Responsible-Changed-By: riastradh@NetBSD.org<br>
 Responsible-Changed-When: Mon, 11 May 2020 21:54:55 +0000<br>
 Responsible-Changed-Why:<br>
 Can you update to HEAD and see if it works now?<br>
 <br>
 <br>
 State-Changed-From-To: open-&gt;feedback<br>
 State-Changed-By: riastradh@NetBSD.org<br>
 State-Changed-When: Mon, 11 May 2020 21:54:55 +0000<br>
 State-Changed-Why:<br>
 mine<br>
 <br>
 <br>
 <br>
 </blockquote></div>

 --000000000000db241405a5812c2e--

State-Changed-From-To: feedback->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Wed, 13 May 2020 06:06:56 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.